--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@ body {
     font-family: Roboto, sans-serif;
     display: flex;
     flex-flow: column;
+    margin: 0;
 }
 
-.nav a, .hero p {
-    color: #e6e7eb
+.nav a, .hero-subtext {
+    color: #e5e7eb
 }
 
 .nav, .header {
@@ -33,4 +34,46 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+.header {
+    padding: 120px 200px;
+    display: flex;
+    gap: 50px;
+    align-items: center;
+}
+
+.header * {
+    margin: 8px 0;
+}
+
+.hero-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+    margin: 0;
+}
+
+.hero-subtext {
+    font-size: 18px;
+}
+
+.main-image {
+    flex: 1;
+    text-align: center;
+}
+
+.header img {
+    height: 300px;
+    width: auto;
+}
+
+button {
+    padding: 8px 30px;
+    background-color: #3882f6;
+    color: white;
+    font-size: 18px;
+    border: #3882f6;
+    border-radius: 10px;
+    font-weight: bold;
 }
