--- a/style.css
+++ b/style.css
@@ -116,3 +116,30 @@ button {
     font-weight: bold;
     text-align: right;
 }
+
+.signup {
+    margin: 100px 25%;
+    display: flex;
+    background-color: #3882f6;
+    padding: 50px 120px;
+    align-items: center;
+    justify-content: space-around;
+    gap: 24px;
+    border-radius: 10px;
+}
+
+.signup-head {
+    font-weight: bold;
+    font-size: 24px;
+    color: white;
+    margin: 0 0 5px 0;
+}
+
+.signup-content {
+    color:#e5e7eb;
+    margin: 0;
+}
+
+button {
+    border: 2px solid white; 
+}
