--- a/style.css
+++ b/style.css
@@ -120,13 +120,13 @@ button {
 }
 
 .signup {
-    margin: 100px 25%;
+    margin: 100px 15%;
     display: flex;
     background-color: #3882f6;
     padding: 50px 120px;
     align-items: center;
     justify-content: space-around;
-    gap: 24px;
+    gap: 15%;
     border-radius: 10px;
 }
 
